Moved images out of folder

--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
       <h2>My favorite hobby</h2>
 
       <a href="https://en.wikipedia.org/wiki/French_horn" target="_blank">
-        <img src="images/horn-intro.jpg" class="horn-intro-image"
+        <img src="horn-intro.jpg" class="horn-intro-image"
       /></a>
       <p class="photo-credit">Credit Asher Legg</p>
       <div class="grid">
-        <img src="images/image1.jpg" />
-        <img src="images/image2.jpg" />
-        <img src="images/image3.jpg" />
-        <img src="images/image4.jpg" />
+        <img src="image1.jpg" />
+        <img src="image2.jpg" />
+        <img src="image3.jpg" />
+        <img src="image4.jpg" />
       </div>
       <p>
         The French horn (since the 1930s known simply as the horn in
