Tried to fix img-fluid issues

--- a/index.html
+++ b/index.html
@@ -129,14 +129,24 @@
       <h2>My favorite hobby</h2>
 
       <a href="https://en.wikipedia.org/wiki/French_horn" target="_blank">
-        <img src="horn-intro.jpg" class="horn-intro-image"
+        <img
+          src="https://images.unsplash.com/photo-1590054387835-ab72678fef01?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZnJlbmNoJTIwaG9ybnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+          class="horn-intro-image"
       /></a>
       <p class="photo-credit">Credit Asher Legg</p>
       <div class="grid">
-        <img src="image1.jpg" />
-        <img src="image2.jpg" />
-        <img src="image3.jpg" />
-        <img src="image4.jpg" />
+        <img
+          src="https://images.unsplash.com/photo-1507838153414-b4b713384a76?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1611927264388-a9d2399df7c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1534076022384-b0755a10293b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1613142659418-718b2ae6940d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=905&q=80"
+        />
       </div>
       <p>
         The French horn (since the 1930s known simply as the horn in
